<resources>
    <string name="app_name">Moment</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_search">Search</string>
    <string name="title_to_do_list">To Do List</string>

    <string name="btn_image">Image</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_map">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="longText">Hello blank fragment
    kdjlkfja;ljf
    asdfjkajs
    anodfioa이ㅓ앰
    ㅜㅐㅇㄴ머ㅑㅐ채ㅑㄴ
    우ㅐㅁ너ㅑ애ㅓ
    ㅜ채ㅓㅁ내ㅑ
    추앤머ㅐㅑ
    ㅡ야ㅐㅇㅁ누ㅐㅑ추ㅐㅑㅇㄴ
    ㅜ챙ㄴ먀ㅐㅓ챠ㅐㄴㅇ무ㅐ
    ㅜㅊ애ㅜㅑㅐㄴ무ㅐ춘앰
    추애ㅜ매ㅑ추ㅐㅇ무
    우채ㅜㄴ애ㅑ춘매ㅑ우
    추앤무ㅐ챠ㅜ애ㅜㅐㅑㅜㅐㅑ러ㅐㅑㅓㅐㄹ맹ㄴ
    충챈무채ㅑ누애ㅑㅓ랴ㅐ넝랴ㅐㅁ널
    ㅜ채우채ㅑㅁㄴㅇ랴ㅐㅓㅐㅑㅇㄴ채눙래ㅑㅜㄴㅁㅇ
    췅누래넘ㅇ랴ㅓ내ㅑ런멀;ㄴㅇㄹㄴ멀;ㅁㅊ
    추ㅐㅓㄴ야ㅓ채ㅑㄴㅇㅁㄹ내며ㅠ해ㅕ뫠ㅑ너래ㅑ
    처ㅐㅁ너ㅐㅑㅓ내ㅑ러ㅐㅑ너ㅐㅑㄴ무리ㅏㅜ추내ㅑㅓ래ㅑㄴ
    수애ㅓ춤내ㅑ러ㅑㅐㅓㅑㅐㅁ누래누매ㅑ러먀더ㅓㅇㄹ
    ㅁ랴ㅐㅇ챠ㅐㄴ어랴ㅐㅓㄴ애ㅑ러ㅜㅁ니ㅏ루녇랴ㅐ너ㅐ랴어
    우랜ㅁ어ㅑㅐㄴ어랴ㅐ내류내ㅑㅑㄴ서ㅑㄴㅇ랴ㅐㅁ너래ㅑㅁ너afvdkddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
    ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
    dddddddddddddddddddddddddddddddd
    dddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
    dddddddddddddddddddddddddddddddd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>