<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.techtown.moment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="org.techtown.moment.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="org.techtown.moment.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_todolist"
        android:name="org.techtown.moment.ui.todolist.ToDoListFragment"
        android:label="@string/title_to_do_list"
        tools:layout="@layout/fragment_todolist" />

</navigation>