<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WriteDiaryActivity">


    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="글쓰기"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addressEditWrite"
        android:layout_width="0dp"
        android:minWidth="48sp"
        android:minHeight="48sp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="right"
        android:text="주소"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveBtn" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditWrite">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/writeDiaryEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="48sp"
                android:minHeight="48sp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:hint="오늘은 무슨 일이 있었나요?"/>

            <LinearLayout
                android:id="@+id/pictureLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:clickable="true"
                    app:srcCompat="@android:drawable/ic_delete" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/windowBackground"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:src="@android:drawable/ic_menu_camera"
            android:title="@string/btn_camera"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/windowBackground"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:src="@android:drawable/ic_menu_gallery"
            android:title="@string/btn_image"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:minWidth="48sp"
            android:minHeight="48sp"
            android:src="@android:drawable/ic_dialog_map"
            android:title="@string/btn_map"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>